// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EnumerationModule uses plain NamedNode for enumerations without members: toMatchSnapshot 1`] = `
"import { NamedNode } from \\"@rdfjs/types\\";
import { ex } from \\"./namespace\\";

const values = {};

export type Enum = NamedNode;

export default values;
"
`;

exports[`EnumerationModule writes a module with enumeration members: toMatchSnapshot 1`] = `
"import { NamedNode } from \\"@rdfjs/types\\";
import { ex } from \\"./namespace\\";

const values = {
    Member1: ex.Member1,
    Member2: ex.Member2
};

export type Enum = typeof values[keyof typeof values];

export default values;
"
`;
